k8s/namespace-and-scaling.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-credentials
  labels:
    name: kube-credentials
